# crowedemo

./: .gitignore  agent.py  api.py  function_app.py  ingest.py  pyproject.toml  requirements.txt
documents/: winterolymics2026.txt
